--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.17"
+    "css-loader": "^1.0.0",
+    "framework7": "^3.2.1",
+    "framework7-vue": "^3.2.1",
+    "rxjs": "^6.3.2",
+    "vue": "^2.5.17",
+    "vue-resource": "^1.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.1",
